--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,9 @@ header {
 	margin: 0 0.5rem;
 }
 
+/* Main body styles */
 .add-book {
-	background: linear-gradient(to right, #56ab2f, #8fca47);
+	background: #56ab2f;
 	border: none;
 	padding: 0 0.5rem;
 	border-radius: 10px;
@@ -73,4 +74,45 @@ header {
 	margin-top: 0.5rem;
 	border-radius: 10px;
 	font-weight: 700;
+}
+
+/* Form and overlay styles */
+.add-book-form {
+	/* display: none; */
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background: #222;
+	padding: 1rem;
+	color: white;
+	border-radius: 10px;
+}
+
+.add-book-form > * {
+	padding: 0.5rem;
+	margin: 0.5rem;
+}
+
+.add-book-form > button {
+	background: #56ab2f;
+	font-weight: 700;
+	border: none;
+	border-radius: 10px;
+	padding: 0.75rem;
+}
+
+.add-book-form > input {
+	background: #333;
+	border-radius: 10px;
+	border: none;
+	color: white;
+	padding: 0.6rem;
+}
+
+.overlay {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	background: hsla(0, 0%, 0%, 0.7);
 }
