--- a/styles.css
+++ b/styles.css
@@ -57,11 +57,6 @@ header {
 	transition: filter 200ms ease;
 }
 
-.card:hover {
-	filter: brightness(0.8);
-	cursor: normal;
-}
-
 .card > .author {
 	font-weight: 500;
 	font-style: italic;
@@ -74,6 +69,7 @@ header {
 	margin-top: 0.5rem;
 	border-radius: 10px;
 	font-weight: 700;
+	cursor: pointer;
 }
 
 /* Form and overlay styles */
