--- a/styles.css
+++ b/styles.css
@@ -22,20 +22,23 @@ header {
 /* Main body styles */
 .add-book {
 	background: #56ab2f;
-	border: none;
+}
+
+.btn {
 	padding: 0 0.5rem;
+	border: none;
 	border-radius: 10px;
-	font-weight: 700;
 	cursor: pointer;
+	font-weight: 700;
 	transition: all 200ms ease;
 }
 
-.add-book:hover {
+.btn:hover {
 	filter: brightness(0.9);
 	transform: translateY(-2px);
 }
 
-.add-book:active {
+.btn:active {
 	filter: brightness(0.7);
 	transform: translateY(2px);
 }
@@ -67,6 +70,17 @@ header {
 	background: #ff4e4e;
 	padding: 0.5rem;
 	margin-top: 0.5rem;
+	border-radius: 10px;
+	font-weight: 700;
+	cursor: pointer;
+}
+
+.read-btn {
+	border: none;
+	background: #b9b7b7;
+	padding: 0.5rem;
+	margin-top: 0.5rem;
+	margin-right: 0.5rem;
 	border-radius: 10px;
 	font-weight: 700;
 	cursor: pointer;
