--- a/styles.css
+++ b/styles.css
@@ -10,18 +10,24 @@ body {
 	background: #2f2f2f;
 }
 
+:root {
+	--main-color: #f5f5f5;
+	--green: #56ab2f;
+	--red: #ff4e4e;
+}
+
 header {
 	display: flex;
 	justify-content: space-between;
 	padding: 1rem;
 	font-size: 1.5rem;
-	color: #f5f5f5;
+	color: var(--main-color);
 	margin: 0 0.5rem;
 }
 
 /* Main body styles */
 .add-book {
-	background: #56ab2f;
+	background: var(--green);
 }
 
 .btn {
@@ -55,7 +61,7 @@ header {
 	border-radius: 8px;
 	padding: 1rem;
 	margin: 0.5rem;
-	color: #ebebeb;
+	color: var(--main-color);
 	background: linear-gradient(60deg, #8e2de2, #4a00e0);
 	transition: filter 200ms ease;
 }
@@ -94,8 +100,15 @@ header {
 	transform: translate(-50%, -50%);
 	background: #222;
 	padding: 1rem;
-	color: white;
+	color: var(--main-color);
 	border-radius: 10px;
+}
+
+.form-header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 100%;
 }
 
 .add-book-form > * {
@@ -104,7 +117,7 @@ header {
 }
 
 .add-book-form > button {
-	background: #56ab2f;
+	background: var(--green);
 	font-weight: 700;
 	border: none;
 	border-radius: 10px;
@@ -128,4 +141,12 @@ header {
 
 .no-display {
 	display: none;
+}
+
+.close.btn {
+	background: var(--red);
+	display: flex;
+	place-items: center;
+	width: 20px;
+	height: 20px;
 }
